<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorPrimary"
    android:id="@+id/drawer_layout"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:backgroundTint="@color/colorAccent">

            <ImageButton
                android:id="@+id/button_sustainability_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:backgroundTint="@color/transparent"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="40dp"
                android:text="@string/go_back"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp">

        <ImageView
            android:id="@+id/treeLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="320dp"
            android:clickable="true"
            android:focusable="true"

            app:srcCompat="@drawable/tree_6" />

        <TextView
            android:id="@+id/nbLeafs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_toStartOf="@id/picNbLeafs"

            android:layout_alignBottom="@id/treeLevel"
            android:layout_marginBottom="-60dp"
            android:textSize="30sp"
            android:text="-"/>


        <ImageView
            android:id="@+id/picNbLeafs"
            android:layout_width="40dp"
            android:layout_height="40dp"

            android:layout_toStartOf="@+id/nbGreenTrees"
            android:layout_marginRight="40dp"

            android:layout_alignBottom="@id/treeLevel"
            android:layout_marginBottom="-60dp"
            app:srcCompat="@drawable/leaf_green" />

        <TextView
            android:id="@+id/nbGreenTrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_toStartOf="@+id/picNbGreenTrees"

            android:layout_alignBottom="@id/treeLevel"
            android:layout_marginBottom="-60dp"
            android:textSize="30sp"
            android:text="-"/>

        <ImageView
            android:id="@+id/picNbGreenTrees"
            android:layout_width="40dp"
            android:layout_height="40dp"

            android:layout_centerHorizontal="true"

            android:layout_alignBottom="@id/treeLevel"
            android:layout_marginBottom="-60dp"
            app:srcCompat="@drawable/tree_6" />

        <TextView
            android:id="@+id/nbGoldenTrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_toEndOf="@+id/picNbGreenTrees"
            android:layout_marginStart="40dp"

            android:layout_alignBottom="@id/treeLevel"
            android:layout_marginBottom="-60dp"
            android:textSize="30sp"
            android:text="-"/>

        <ImageView
            android:id="@+id/picNbGoldenTrees"
            android:layout_width="40dp"
            android:layout_height="40dp"

            android:layout_toEndOf="@+id/nbGoldenTrees"

            android:layout_alignBottom="@id/treeLevel"
            android:layout_marginBottom="-60dp"
            app:srcCompat="@drawable/tree_7" />




        <TextView
            android:id="@+id/levelDescription"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/nbGreenTrees"
            android:layout_marginTop="70dp"
            android:textSize="15sp"
            android:textAlignment="center"
            android:text="För att nå nästa nivå behöver du samla X miljöresor"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/scoreboardCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="360dp"
            android:backgroundTint="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/scoreboardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/sustainability_text"/>

                <TextView
                    android:id="@+id/lastYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:text="@string/sustainability_year_end"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/lastYear"
                    android:layout_marginEnd="62dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:text="@string/sustainability_year_start"/>

                <TextView
                    android:id="@+id/travelTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/lastYear"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="0dp"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:text="@string/travel_time"/>

                <ImageView
                    android:id="@+id/picTravelRanking"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"

                    android:clickable="true"
                    android:focusable="true"

                    app:srcCompat="@drawable/toptravelers80" />

                <TextView
                    android:id="@+id/text_scoreboard"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20dp"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:text="Du reser mer hållbart än X% av våra resenärer"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</RelativeLayout>